crates/wac-parser/tests/resolution/fail/missing-interface-export.wac
import x: interface {
};

let i = new foo:bar { x };
